--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "communityx",
+  "name": "git-fetch",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "export": "next export"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bulma": "^0.9.0",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "sass": "^1.26.11"
   }
 }
