--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bulma": "^0.9.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
     "sass": "^1.26.11"
